# elite_robot_ros2

./: README.md
cs66_description/: CMakeLists.txt  package.xml
cs66_description/launch/: view_robot.launch.py
cs66_description/meshes/visual/: link1.dae  link4.dae  link5.dae
cs66_description/rviz/: view_robot.rviz
cs66_description/urdf/: cs66_macro.urdf.xacro  robot.urdf.xacro
elite_robot_bringup/: CMakeLists.txt  package.xml
elite_robot_bringup/config/: cs66_controllers.yaml
elite_robot_bringup/launch/: bringup_robot.launch.py
elite_robot_description/: CMakeLists.txt  package.xml
elite_robot_description/docs/: elite_robot_cs66.ods
elite_robot_description/launch/: upload_robot.launch.py  view_robot.launch.py
elite_robot_description/meshes/cs66/collison/: base.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
elite_robot_description/rviz/: view_robot.rviz
elite_robot_description/urdf/: cs66_gazebo.urdf.xacro  cs66_macro.urdf.xacro  cs66_ros2_control.urdf.xacro  robot.urdf.xacro
elite_robot_hardware_interface/: CMakeLists.txt  elite_robot_hardware.xml  package.xml
elite_robot_hardware_interface/include/elite_robot_hardware_interface/: elite_robot_system.hpp
elite_robot_hardware_interface/src/: elite_robot_system.cpp
elite_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
elite_robot_moveit_config/config/: cs66_robot.ros2_control.xacro  cs66_robot.srdf  cs66_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
elite_robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+2 files in other folders)
